--- a/Fase 2/desafio2/desafio/html.html
+++ b/Fase 2/desafio2/desafio/html.html
@@ -19,18 +19,38 @@
 
   <div class="gallery img">
     <ul id="imageList">
-      <li><img src="img/img1.jpg" alt="Imagem 1"></li>
-      <li><img src="img/img2.jpg" alt="Imagem 2"></li>
-      <li><img src="img/img3.jpg" alt="Imagem 3"></li>
+      <li><img src="img/img1.jpg" alt="Imagem 1" id="img1"></li>
+      <li><img src="img/img2.jpg" alt="Imagem 2" id="img2"></li>
+      <li><img src="img/img3.jpg" alt="Imagem 3" id="img3"></li>
       <!-- Adicione mais imagens conforme necessário -->
     </ul>
   </div>
 
+ 
   <div id="myModal" class="modal">
+    <div class="background"></div>
     <span class="close-btn">&times;</span>
     <button class="close-btn" id="closeModalBtn">Fechar</button>
+    <button class="dark-btn" id="darkBtn">Dark</button><br/>
+
+
+
+    
     <img id="modalImg" src="" alt="Imagem em destaque">
+    <div class="btn-left"><span><</span></div>
+    <div class="btn-right"><span>></span></div>
+
+
+    <div class="galery-list">
+
+      <img src="img/img1.jpg" alt="Imagem 1" id="img4" width="100px">
+      <img src="img/img2.jpg" alt="Imagem 2" id="img5" width="100px">
+      <img src="img/img3.jpg" alt="Imagem 3" id="img6" width="100px">
+    </div>
+
   </div>
+
+
 
   <script src="script.js"></script>
 </body>
